WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
139723
[EFL]Fix build warning in MiniBrowser
https://bugs.webkit.org/show_bug.cgi?id=139723
Summary
[EFL]Fix build warning in MiniBrowser
Hunseop Jeong
Reported
2014-12-16 22:59:24 PST
../../Tools/MiniBrowser/efl/main.c:988:9: warning: format not a string literal and no format arguments [-Wformat-security] after
r177357
Attachments
Patch
(1.22 KB, patch)
2014-12-16 23:13 PST
,
Hunseop Jeong
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hunseop Jeong
Comment 1
2014-12-16 23:13:18 PST
Created
attachment 243428
[details]
Patch
Grzegorz Czajkowski
Comment 2
2014-12-17 00:09:10 PST
Comment on
attachment 243428
[details]
Patch Thanks for fixing it!
WebKit Commit Bot
Comment 3
2014-12-17 00:44:38 PST
Comment on
attachment 243428
[details]
Patch Clearing flags on attachment: 243428 Committed
r177439
: <
http://trac.webkit.org/changeset/177439
>
WebKit Commit Bot
Comment 4
2014-12-17 00:44:42 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug