[EFL]Fix build warning in MiniBrowser https://bugs.webkit.org/show_bug.cgi?id=139723

Patch by Hunseop Jeong <hs85.jeong@samsung.com> on 2014-12-17
Reviewed by Darin Adler.

The warning is caused by the compiler wanting the first argument to be a
string literal, not a dynamically created string.

* MiniBrowser/efl/main.c:
(quit):

Canonical link: https://commits.webkit.org/157631@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@177439 268f45cc-cd09-0410-ab3c-d52691b4dbfc